[project]
name = "mikecreighton-dot-com-content-mcp"
version = "0.1.0"
description = "A Model Context Protocol Server for MikeCreighton.com Content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "markitdown>=0.0.2",
    "mcp[cli]>=1.3.0",
    "mypy>=1.15.0",
    "requests>=2.32.3",
    "ruff>=0.9.10",
]
